# hacspec-python

./: .gitignore  .travis.yml  404.html  LANGUAGE.md  Makefile  README.md  draft-hacspec.html  hacspec.md  index.html  index.xml  sitemap.xml  test_rust.py
categories/: index.html  index.xml
compiler/: .gitignore  Readme.md  chacha20.py  gf128.fst  myocamlbuild.ml  poly1305.fst
docs/: .buildinfo  genindex.html  hacspec.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
example/: chacha20.py  chacha20_test.py
fips-180-4-sha-2/: NIST.FIPS.180-4-August-2015.md  SHA2.cry
hacspec-py/: Makefile  setup.py
lib/: check.py  speclib.py  speclib.pyi
lib/rust/: Cargo.toml
lib/rust/src/: speclib.rs
poly-slides/: index.html  sitemap.xml
rfc/: README.md  draft-hacspec.md
rfc-7539-chacha20-poly1305/: rfc7539-cryptol.md
spec-checker/: Main.hs  check_schema.py  spec-checker.cabal  spec-checker.py
spec-checker-ocaml/: .merlin  Makefile  _tags  chacha20.py  myocamlbuild.ml  opam
spec-checker/examples/: aead_chacha20poly1305.py  chacha20.py  ctr.py  poly1305.py  salsa20-func.py  speclib.py
spec-checker/examples/hacspec-rust/src/: chacha20.rs  lib.rs
spec-checker/haskell/: LICENSE  README.md
spec-checker/haskell/examples/: salsa20.py
spec-checker/python/: check.py  check_schema.py  spec-checker.py  spec_checker.py  speclib_i.py
spec-compilers/: Makefile  README.md  chacha20.fst  hacspec_to_fstar.py  poly1305.fst  sha2.fst  speclib.fst
specs-old/: aead_aes128gcm.py  aead_aes128gcm_test.py  aead_chacha20poly1305.py  (+13 more)
(+248 files in other folders)
