name:                spec-checker
version:             0.1.0.0
synopsis:            A crypto spec language validity checker
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Aaron Tomb
maintainer:          atomb@galois.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable spec-checker
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base,
                       language-python
  -- hs-source-dirs:      
  default-language:    Haskell2010
