[package]
name = "speclib"
version = "0.0.1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
description = "hacspec speclib implementation in Rust"
repository = "https://github.com/hacs-workshop/hacspec"
keywords = ["hacspec", "python"]
license = "MPL-2.0"

[lib]
name = "speclib_ffi"
crate-type = ["dylib"]
path = "src/speclib.rs"

[dependencies]
libc = "0.2"
